k8s/somenamespace/somenamespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: somenamespace
    labels:
        name: somenamespace
